# rust_at_one

./: .dockerignore  .gitignore  .tarpaulin.toml  Cargo.toml  Dockerfile  README.md  azure-pipelines.yml  buildspec.yml  setup.sh  simple_test.sh  stack.yml
macros/: Cargo.toml
macros/src/: lib.rs
src/: error.rs  lib.rs  main.rs  mongo.rs
src/documents/: mod.rs  post.rs
src/handlers/: mod.rs  post_controller.rs
src/services/: mod.rs  post_service.rs
tests/: lib.rs
