[package]
name = "rust_at_one"
version = "0.1.0"
authors = ["Alexander Herlin <alexander.herlin@outlook.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/OneAgencySE/rust_at_one"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "integration"
path = "tests/lib.rs"

[dependencies]
actix-web = { version = "2.0", features = ["openssl"] }
openssl = { version="0.10" }
actix-rt = "1.0"
mongodb = "1.0"
dotenv = "0.15"
dotenv_codegen = "0.15"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures-util = "0.3"
futures = "0.3.5"

[dev-dependencies]
rstest = "0.6"
bytes = { version = "0.5", features = ["serde"] }
uuid = "0.8"